# word

./: .clangd  .gitignore  CMakeLists.txt  README.md  args.h  board.cpp  compile_flags.txt  dictionary.cpp  dictionary.h  main.cpp  tests.cpp  trie.cpp
include/: test_runner.h
src/common/: board.cpp  board.h  corpus.cpp  corpus.h  dict_converter.cpp  dict_converter.h  find.cpp  find.h  line_reader.h  trie.cpp  trie.h
src/tests/: main.cpp  tests.cpp  tests.h
src/utils/dict_converter/: main.cpp
src/words/: args.cpp  main.cpp
test_data/: input1.txt  input2.txt
